--- a/src/components/BlockContent.css
+++ b/src/components/BlockContent.css
@@ -1,10 +1,119 @@
+ul, li {
+    list-style: none;
+}
+
 .wrapper_block_content{
+    display: flex;
     margin-top: 100px;
+    margin-right: 198px;
+    margin-bottom: 66px;
+    margin-left: 198px;
+   
 }
 
 .photo_teacher{
-    max-width: 592px;
-    width: 100%;
+    width: 592px;
     height: 827px;
 
 }
+
+
+
+.photo_teacher img{
+    width: 100%;
+    height: 100%;
+
+}
+
+.about_teacher{
+    background-color: black;
+
+    width: 612px;
+    height: 827px;
+
+}
+
+.teacher_name{
+    margin: 45px 209px 32px 50px;
+}
+.teacher_name h3{
+    font-family: Rubik;
+font-size: 36px;
+font-style: normal;
+font-weight: 500;
+line-height: 43px;
+color: white;
+margin-bottom: 0;
+
+
+}
+.teacher_name p{
+    color: #20A4F3;
+    font-family: Roboto;
+font-size: 20px;
+font-style: normal;
+font-weight: 500;
+line-height: 28px;
+letter-spacing: 0em;
+text-align: left;
+margin-top: 0;
+
+}
+
+
+.about_list ul{
+    color: white;
+    font-family: Roboto;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 25px;
+letter-spacing: 0em;
+text-align: left;
+
+padding-left: 0;
+}
+
+.about_list ul li{
+    margin-top: 30px;
+margin-bottom: 30px;
+margin-left: 56px;
+margin-right: 113px;
+}
+
+.pink_rect{
+    background: #FF3366;
+    height: 223px;
+    width: 362px;
+    position: static;
+    margin-top: 86px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.pink_rect span{
+    color: white;
+    font-family: Rubik;
+    font-size: 33px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 46px;
+    letter-spacing: 0em;
+    text-align: left;
+
+}
+
+.pink_rect p{
+    color: white;
+    width: 246px;
+    height: 134px;
+    margin: 0;
+    font-family: Rubik;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 96px;
+    line-height: 140%;
+}
+
