--- a/src/components/Curses_which_teach.css
+++ b/src/components/Curses_which_teach.css
@@ -5,92 +5,100 @@ p{
 
 
 .wrapper_curses_which_teach{
-    width: 1600px;
-    height: 313px;
-    background-color: black;
+    max-width: 1600px;
+    width: 100%;
+    max-height: 313px;
+    background-color: #011627;
+    padding-top: 45px;
+    padding-bottom: 55px;
+    height: 100%;
+    margin-bottom: 145px;
     
 }
-.curses_which_teach_theme{
-    padding-top: 45px;
+
+.container_for_curses_which_teach{
+    max-width: 1204px;
+    width: 100%;
+    margin: 0 auto;
 }
 
-.curses_which_teach_theme p{
+.curses_which_teach_theme{
     color: white;
     font-family: Rubik;
-font-size: 28px;
-font-style: normal;
-font-weight: 500;
-line-height: 33px;
-letter-spacing: 0em;
-text-align: left;
-margin-left: 198px;
-
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 33px;
+    margin-bottom: 30px;
 
 }
-
-
-.marketing{
+.part__courses__block{
+    display: grid;
+    grid-template-columns: 10fr 9fr;
+    padding-left: 37px;
     background-color: white;
-    display: flex;
-    width: 592px;
-    height: 150px;
     border-radius: 10px;
-    margin:30px 810px 55px 198px;
-}
-
-
-.border_for_line{
-    border-right: 1px solid #EBEBEB;
-    padding: 38px 27px 37px 37px;
+    max-width: 592px;
+    height: 150px; 
+  
+    
     
 }
 
-.pink_color{
-    color:#FF3366;
+
+.marketing__and__PR{
+    font-weight: 500;
+    font-size: 16px;
+    color: #FF3366;
+    text-transform: uppercase;
+    line-height: 19px;
+    margin-bottom: 8px;
+    margin-top: 38px;
+}
+.marketing__and__PR__down{
+    color: #333333;
     font-family: Rubik;
-font-size: 16px;
-font-style: normal;
-font-weight: 500;
-line-height: 19px;
-letter-spacing: 0em;
-text-align: left;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
 }
 
-.border_for_line span{
+.start__and__end{
+    color: #011627;
     font-family: Rubik;
-font-size: 20px;
-font-style: normal;
-font-weight: 500;
-line-height: 24px;
-letter-spacing: 0em;
-text-align: left;
-
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 21px;
+    margin-bottom: 8px;
 }
 
-.marketing_author{
-    padding: 51px 32px;
-}
-
-.marketing_author span{
-    font-family: Rubik;
-font-size: 18px;
-font-style: normal;
-font-weight: 500;
-line-height: 21px;
-letter-spacing: 0em;
-text-align: left;
-margin-bottom: 8px;
-
-}
-
-.marketing_author p{
+.lector__name{
     font-family: Roboto;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 19px;
-letter-spacing: 0em;
-text-align: left;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 19px;
+    color: #333333;
+}
 
+
+.marketing__left__block {
+    border-right: 1px solid #ebebeb;
+    height: 100%;
 
 }
+
+
+
+.marketing__right__block {
+    padding-left: 32px;
+    padding-top: 38px;
+  
+}
+
+
+
