--- a/src/components/Curses_which_teach.css
+++ b/src/components/Curses_which_teach.css
@@ -54,6 +54,7 @@ p{
     line-height: 19px;
     margin-bottom: 8px;
     margin-top: 38px;
+    font-family: Rubik;
 }
 .marketing__and__PR__down{
     color: #333333;
